fixed cover photo cropping

--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ a:hover {
 #info-container {
   display: block;
   max-width: 70%;
-  max-height: 70%;
+  max-height: 20%;
 }
 
 #info-container {
